<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="#FFFFFF"
        app:titleTextColor="#FFFFFF" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbMain"
        app:layout_constraintVertical_bias="0.196">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvHelp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:text="@string/tvHelp"
                android:textColor="@color/purple_600"
                android:textSize="30dp"
                app:layout_constraintTop_toBottomOf="@+id/tbMain" />

            <TextView
                android:id="@+id/tvRules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/tvRules"
                android:textSize="23dp"
                app:layout_constraintTop_toBottomOf="@+id/tvHelp" />

            <TextView
                android:id="@+id/etRules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:clickable="false"
                android:ems="10"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@string/etRules"
                android:textSize="17sp"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintTop_toBottomOf="@+id/tvRules" />

            <TextView
                android:id="@+id/tvHelpRules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/tvHelpRules"
                android:textSize="23dp"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintTop_toBottomOf="@+id/etRules" />

            <TextView
                android:id="@+id/etHelp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="30dp"
                android:clickable="false"
                android:ems="10"
                android:gravity="center"
                android:inputType="textMultiLine"
                android:text="@string/etHelp"
                android:textSize="17sp"
                app:layout_constraintTop_toBottomOf="@+id/tvHelpRules"
                app:layout_constraintVertical_bias="0.0" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>